iac_db_project/traefik/traefik.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.0
          args: [--api.insecure, --providers.kubernetesingress]
          resources:
            limits:
              cpu: '0.5'
              memory: 128Mi
            requests:
              cpu: '0.1'
              memory: 64Mi
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
