iac_db_project/traefik/03-catapp-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: catapp
spec:
  ports:
    - name: web
      port: 5000
      targetPort: web
  selector:
    app: catapp
