iac_db_project/traefik/traefik-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
spec:
  type: ClusterIP  # default: LoadBalancer
  ports:
    - name: dashboard
      port: 9000
      targetPort: dashboard
  selector:
    app: traefik
