iac_db_project/traefik/04-catapp-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catapp-ingress
spec:
  rules:
    - host: catapp.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catapp
                port:
                  name: web
